<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".src.activity.DrawerActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".src.activity.CreateEventFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            android:background="@drawable/parisguidetower"
            android:layout_gravity="center_horizontal" />

        <Switch android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="4dp"
            android:text="Privé"
            android:fontFamily="sans-serif"
            android:textColor="#616161"
            android:textSize="18sp"
            android:checked="false"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/switch1"></Switch>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:singleLine="true"
            android:hint="@string/label_name_event"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:singleLine="true"
            android:hint="@string/label_subject_event"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAdress"
            android:singleLine="true"
            android:hint="@string/label_address_event"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDate"
            android:focusable="true"
            android:singleLine="true"
            android:hint="@string/label_date_event"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editTextNbPartMax"
            android:singleLine="true"
            android:hint="@string/label_nbPartMax_event"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Créer"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>
